Fix: A UI estava com pouca responsividade em dispositivos móveis, agora a visibilidade está melhor

--- a/src/styles/votar.module.scss
+++ b/src/styles/votar.module.scss
@@ -86,6 +86,7 @@
     margin: auto;
     margin-top: 26vh;
     gap: 5rem;
+    padding: 8px;
 
     p {
         color: colors.$gray;
